--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 
 <body>
-	<p>Hola Mundo</p>
+	<h1>Hola Mundo</h1>
+    <br />
+    <p>Curso Git: Nuestro primer proyecto.</p>
 </body>
 </html>
