Add command list

--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
 	<h1>Hola Mundo</h1>
     <br />
     <p>Curso Git: Nuestro primer proyecto.</p>
+    <h2>Comandos Vistos:</h2>
+    <ul>
+    	<li>Comando: git init | Inicializa el proyecto git</li>
+        <li>Comando: git status | Estado del proyecto git</li>
+        <li>Comando: git add archivo.ext | Añade archivos al stagin área</li>
+        <li>Comando: git commit -m "comentatio" | Crea un commit de los archivos modificados.</li>
+        <li>Comando: git log | Lista los commit realizados en el proyecto.</li>
+        
+    </ul>
 </body>
 </html>
