Add command: checkout for commits

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <li>Comando: git commit -m "comentatio" | Crea un commit de los archivos modificados.</li>
         <li>Comando: git log | Lista los commit realizados en el proyecto.</li>
         
+        <li>Comando: git checkout 'codigo sha commit' | Viajamos en el tiempo en los archivos de cada commit</li>
+        <li>Comando: git checkout master | Volvemos a la rama master al último commit realizado y dejamos todo como estaba antes de viajar en el tiempo</li>
+        
     </ul>
 </body>
 </html>
