--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         
         <li>Comando: git checkout 'codigo sha commit' | Viajamos en el tiempo en los archivos de cada commit</li>
         <li>Comando: git checkout master | Volvemos a la rama master al último commit realizado y dejamos todo como estaba antes de viajar en el tiempo</li>
+        <li>Command: git brahch: nos muestra las ramas que existen</li>
+        <li>Command: git brahch Test: crea una nueva rama llamada Test</li>
+        <li>Command: git checkout Test: Cambia a la nueva rama Test</li>
         
     </ul>
 </body>
