Add nota explicativa de ramas

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <li>Comando: git checkout master | Volvemos a la rama master al último commit realizado y dejamos todo como estaba antes de viajar en el tiempo</li>
         <li>Command: git brahch: nos muestra las ramas que existen</li>
         <li>Command: git brahch Test: crea una nueva rama llamada Test</li>
-        <li>Command: git checkout Test: Cambia a la nueva rama Test</li>
+        <li>Command: git checkout Test: Cambia a la nueva rama Test
+        	<p>Al cambiar de rama, los cambios se reflejan en los archivos reales del proyecto</p>
+        </li>
         
     </ul>
 </body>
