Cambio en el texto principal Hola

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<h1>Hola Mundo</h1>
+	<h3 style="text-transform:uppercase; letter-spacing:5px; color:#F00;">Hola Mundo</h3>
     <br />
     <p>Curso Git: Nuestro primer proyecto.</p>
     <h2>Comandos Vistos:</h2>
