Añade nuevos comandos Git Hub

--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
         <li>Command: git brahch Test: crea una nueva rama llamada Test</li>
         <li>Command: git checkout Test: Cambia a la nueva rama Test
         	<p>Al cambiar de rama, los cambios se reflejan en los archivos reales del proyecto</p>
-        </li>
-        
+        </li>        
+    </ul>
+    
+    <h2>GIT HUB</h2>
+    <p>Trabajando con git & GitHub</p>
+    <ul>
+    	<li>git clone ULR | Clona un repositorio remoto</li>
     </ul>
 </body>
 </html>
