Add comando git remote origin

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <p>Trabajando con git & GitHub</p>
     <ul>
     	<li>git clone ULR | Clona un repositorio remoto</li>
+        <li>git remote origin URL | Conectamos proyecto con repositorio remoto</li>
     </ul>
 </body>
 </html>
